# algdspolytech20252026

./: .gitignore  Adj_Graph_to_list.c  Adj_Graph_to_list.h  AlgD.vcxproj  CMakeLists.txt  Graph.c  Header.h  Homework_1_2025  Homework_1_2025.c  Lab-A.c  Lab-A_Test.c  Lab-C.c  Lab-C.h  Lab-C_Test.c  Lab-D.c  Lab-D.h  LabC.c  LabC.h  LabD.c  LabD.h  LabD_main.c  LabD_test.cpp  Lab_A_test.cpp  Lab_C_test.cpp  Lab_D.c  Lab_D_TEST.c  Lab_D_test.cpp  Laba_C.c  Makefile  Priority_queue.c  Priority_queue.h  README.md  README.txt  README22.md  Readme.md  Source.c  Test.c  Test.cpp  UnitTest.cc  UnitTest.cpp  (+48 more)
Btree/: README.md  btree.cc  btree.h
D_[503010240001]_Варданян_Роберт/: Makefile  README.md  longest_path.c  longest_path.h  main.c  tests.c
LAB_D/: CMakeLists.txt  VertexCover.c  VertexCover.h
LAB_H/: Node.c  Node.h  README.md  README.txt  test.cpp
LAB_J/: README.md  main.c
Lab B/: Makefile  README.md
Lab-B/: Adj_Graph_to_list.c  Adj_Graph_to_list.h  README.md  desktop.ini  test.cpp
Lab-C/: LabC.c  Labirinth.cpp  List10.txt  List5.txt  List7.txt  List8.txt  List9.txt  Pieces.c  Pieces.h  README.md  Source.c  graph.txt  lab.c  lab.h  main.c  main.h  maze_solver.c  maze_solver.h  test.c  test.cpp  test_maze_solver.c
Lab-D/: .gitignore  N_Queens.c  N_Queens.h  README.md  main.c  output.txt  test.cpp
LabC/: .gitignore  LabC.vcxproj  LabC_test.cpp  README.md  graph.txt  header.h  input1.txt  input10.txt  input3.txt  input8.txt
LabD/: main.c  (+6 more)
lab-C/: .gitignore  Alg2.vcxproj  CMakeLists.txt  Cc.c  Ch.h  Data.txt  False.txt  Functions.c  Functions.h  Graph.C  Graph.H  Graph.c  GraphFile.txt  Header.h  Lab-C.vcxproj  List2Matrix.c  List2Matrix.h  Main.C  Matrix2.txt  Matrix3.txt  README.md  Sample-Test2.vcxproj  Source.c  Source.cpp  T3GRCMP.vcxproj  TESTC.cpp  Test.cpp  Tests.C  Tests.H  Tests.c  True.txt  UnitTest.cc  adjacency_list.txt  cells.c  cells.h  func.c  func.h  graph.c  graph.h  graph.txt  (+26 more)
lab-C/Lab_C_Nikolaev_Vladimir_5030102_40002/Lab_C_Nikolaev_Vladimir_5030102_40002/: Lab_C_Nikolaev_Vladimir_5030102_40002.vcxproj.filters  graph.h  main.c
lab-C/Lab_C_Nikolaev_Vladimir_5030102_40002/TEST/: TEST.vcxproj.filters  test.cpp
lab-C/src/: graph.c  graph.h  main.c
lab-C/test/: test.cpp  test.cс
lab-C/var15/: main.c  main.h  output.txt
lab_C/: CMakeLists.txt  README.txt  graph.c  graph.h  main.c  paper_cells.c  paper_cells.h  test_paper_cells.c  unit_test.c  unit_test.h
(+442 files in other folders)
